# TMAxplode

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: test.ipynb
src/tmaxplode/: __init__.py  main.py
tests/: test_main.py
