[project]
authors = [{name = "Paul Kiessling", email = "pakiessling@ukaachen.de"}]
dependencies = []
description = "Separating tissue pieces based on centroid location in spatial transcriptomics data."
name = "TMAxplode"
requires-python = ">= 3.9"
version = "0.1.0"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
tmaxplode = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
scipy = ">=1.0.0,<2"
numpy = ">=1.10.0,<3"
scikit-learn = ">=0.17.0,<2"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.dependencies]
anndata = ">=0.11.1,<0.12"
pytest = ">=8.3.4,<9"

[tool.pixi.feature.test.tasks]
test = "pytest"
